<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1dp">

    <LinearLayout
        android:id="@+id/linhano"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/anog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/celula"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/celula"
            android:gravity="center"
            android:text="@string/golpro"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/celula"
            android:gravity="center"
            android:text="@string/jogos"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/celula"
            android:gravity="center"
            android:text="@string/media"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/golsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/celula"
            android:gravity="center"
            android:textColor="@color/MediumSeaGreen"/>

        <TextView
            android:id="@+id/jogosg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/celula"
            android:gravity="center"
            android:textColor="@color/MediumSeaGreen"/>

        <TextView
            android:id="@+id/mediag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/celula"
            android:gravity="center"
            android:textColor="@color/MediumSeaGreen"/>

    </LinearLayout>

</LinearLayout>